Convert main integration tests into reusable backbox tests
* Introduce new module: `integration-tests` to contain the test
  code for backbox integration tests

* Refactors existing main integration tests to avoid relying on
  Dropwizard internals.

* Add new test extension for managing the test environment with
  custom server managers discovered via `ServiceLoader`

* Use Dropwizard test extentions for the reference implementation
  of `PolarisServerManager`. Custom server builds can provide
  their own environment-specific implementations.

* Add helper classes for REST API (Management and Catalog)

* Run reusable tests by extending them in the DW module.
  Using test suites is also possible, but it only uses one
  gradle test worker, so test parallelism is reduced. At the
  same time running tests in parallel withing the same JVM using
  JUnit5 threads currently leads to errors.